--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 # main links
 main:
-  - title: "Передачи"
-    url: /
-  - title: "Подкаст"
-    url: /podcast/
+  - title: "Все выпуски"
+    url: /episodes/
+  # - title: "Подкаст"
+  #  url: /podcast/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
