--- a/_config.yml
+++ b/_config.yml
@@ -252,3 +252,9 @@ defaults:
       comments: # true
       share: true
       related: true
+- scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
