--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 main:
   - title: "Все выпуски"
     url: /episodes/
-  # - title: "Подкаст"
-  #  url: /podcast/
+  - title: "Подкаст"
+    url: /podcast/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
