--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Пространство смыслов"
 title_separator          : "-"
 name                     : "ZSM"
 description              : "Медиапроект Дмитрия Запольского"
-url                      : "https://spaceofmeanings.github.io"
+url                      : "http://zapolskiy.tv"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "spaceofmeanings/spaceofmeanings.github.io"
 teaser                   : "/assets/images/500x300.png"
