--- a/_config.yml
+++ b/_config.yml
@@ -78,9 +78,9 @@ social:
 
 # Analytics
 analytics:
-  provider               : false # false (default), "google", "google-universal", "custom"
+  provider               : google
   google:
-    tracking_id          :
+    tracking_id          : "UA-64561587-3"
 
 
 # Site Author
