--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ atom_feed:
 google_site_verification :
 bing_site_verification   :
 alexa_site_verification  :
-yandex_site_verification :
+yandex_site_verification : d659c8d7eb663679
 
 # Social Sharing
 twitter:
