--- a/_config.yml
+++ b/_config.yml
@@ -250,7 +250,7 @@ defaults:
       author_profile: false
       read_time: false
       comments: # true
-      share: true
+      share: false
       related: true
   - scope:
       path: ""
